--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,6 @@ push-docker-registry:
   only:
     - master
   script:
-    - docker build -t registry.gitlab.com/<gitlab_username>/angular-ci-cd .
-    - docker login -u <gitlab_username> -p $CI_BUILD_TOKEN registry.gitlab.com
-    - docker push registry.gitlab.com/<gitlab_username>/angular-ci-cd
+    - docker build -t $CI_REGISTRY/partmanager/webapp .
+    - docker login -u $CI_DEPLOY_USER -p $CI_DEPLOY_PASSWORD $CI_REGISTRY
+    - docker push $CI_REGISTRY/partmanager/webapp
