--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,78 +1,33 @@
-services:
-  - docker:dind
-
 stages:
-  - dependencies
-  - test
   - build
-  - publish
+  - package
+  - deploy
 
-install_dependencies:
-  image: node:18.14-alpine
-  stage: dependencies
-  script:
-    - npm install
-#  only:
-#    - master
-  cache:
-    key:
-      files:
-        - package-lock.json
-    paths:
-      - node_modules
 
-#lint:
-#  image: node:18.14-alpine
-#  stage: test
-#  script:
-#    - npm link @angular/cli@15.1.6
-#    - ng lint
-#  cache:
-#    key:
-#      files:
-#        - package-lock.json
-#    paths:
-#      - node_modules
-#    policy: pull
-
-#test:
-#  image: markhobson/node-chrome:latest
-#  stage: test
-#  script:
-#    - npm link @angular/cli@11.2.6
-#    - npm test -- --browsers=ChromeHeadless --watch=false
-#  cache:
-#    key:
-#      files:
-#        - package-lock.json
-#    paths:
-#      - node_modules
-#    policy: pull
-
-build_image:
-  image: node:18.14-alpine
+build:
   stage: build
+  image: node:latest
   script:
-    - npm link @angular/cli@15.1.6
-    - npm run build
+    - npm install -g @angular/cli@15.1.6
+    - npm install
+    - ng build
   artifacts:
     paths:
-      - $CI_PROJECT_DIR/dist
+      - dist/
+    expire_in: 2 hours
   cache:
-    key:
-      files:
-        - package-lock.json
     paths:
-      - node_modules
-    policy: pull
+      - node_modules/
 
-push-docker-registry:
-  image: docker:latest
-  stage: publish
-#  only:
-#    - master
+docker-build:
+  image: docker:stable
+  stage: package
+  services:
+    - docker:dind
+  before_script:
+    - echo $CI_BUILD_TOKEN | docker login -u "$CI_REGISTRY_USER"
+      --password-stdin $CI_REGISTRY
   script:
-    - docker build -t $CI_REGISTRY/partmanager/webapp .
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-#    - docker login -u $CI_DEPLOY_USER -p $CI_DEPLOY_PASSWORD $CI_REGISTRY
-    - docker push $CI_REGISTRY/partmanager/webapp
+    - IMAGE_NAME="$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME"
+    - docker build --pull -t "$IMAGE_NAME" -f Dockerfile .
+    - docker push "$IMAGE_NAME"
