--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,10 +24,7 @@ docker-build:
   stage: package
   services:
     - docker:dind
-  before_script:
-    - echo $CI_BUILD_TOKEN | docker login -u "$CI_REGISTRY_USER"
-      --password-stdin $CI_REGISTRY
   script:
     - IMAGE_NAME="$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME"
-    - docker build --pull -t "$IMAGE_NAME" -f Dockerfile .
+    - docker build -t "$IMAGE_NAME" .
     - docker push "$IMAGE_NAME"
