--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,9 +26,7 @@ docker-build:
   stage: package
   services:
     - docker:dind
-  before_script:
-    - echo $CI_BUILD_TOKEN | docker login -u "$CI_REGISTRY_USER"
-      --password-stdin $CI_REGISTRY
   script:
-    - docker build -t creg01.klaffenboeck.eu/partmanager/webapp .
-    - docker push creg01.klaffenboeck.eu/partmanager/webapp
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -t $CI_REGISTRY/partmanager/webapp/image:latest .
+    - docker push $CI_REGISTRY/partmanager/webapp/image:latest
