--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,8 @@ stages:
   - package
 
 build:
-  image:
-    - node:latest
-  stage:
-    - build
+  image: node:latest
+  stage: build
   script:
     - npm install -g @angular/cli@15.1.6
     - npm install
@@ -20,14 +18,10 @@ build:
       - node_modules/
 
 docker-build:
-  image:
-    - docker:stable
-  stage:
-    - package
-  only:
-    - master
-  services:
-    - docker:dind
+  image: docker:stable
+  stage: package
+  only: master
+  services: docker:dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $CI_REGISTRY/partmanager/webapp:latest .
