--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,10 @@ build:
 docker-build:
   image: docker:stable
   stage: package
-  only: master
-  services: docker:dind
+  only:
+    - master
+  services:
+    - docker:dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $CI_REGISTRY/partmanager/webapp:latest .
