--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,5 +26,5 @@ deploy:
     - docker:dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/partmanager/webapp:latest .
-    - docker push $CI_REGISTRY/partmanager/webapp:latest
+    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH:latest .
+    - docker push $CI_REGISTRY/$CI_PROJECT_PATH:latest
