--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,11 @@ stages:
   - build
   - deploy
 
+variables:
+  DOCKER_DRIVER: overlay2
+  BUILDX_VERSION: "v0.6.1"
+  BUILDX_ARCH: "linux-amd64"
+
 build:
   image: node:latest
   stage: build
@@ -17,14 +22,20 @@ build:
     paths:
       - node_modules/
 
-deploy:
+docker-build:
   image: docker:stable
   stage: deploy
   only:
     - master
   services:
     - docker:dind
-  script:
+  before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH:latest .
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH:latest
+    - wget -O /usr/bin/docker-buildx https://github.com/docker/buildx/releases/download/${BUILDX_VERSION}/buildx-${BUILDX_VERSION}.${BUILDX_ARCH}
+    - chmod +x /usr/bin/docker-buildx
+  script:
+    - docker-buildx create --use
+    - docker-buildx build
+      --platform linux/amd64,linux/arm/v7,linux/arm64/v8
+      --tag ${CI_REGISTRY_IMAGE}:latest
+      --push .
