added only master back in

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ deploy:
 deploy-latest:
   <<: *docker-job
   stage: deploy
-  #  only:
-  #    - master
+  only:
+    - master
   variables:
     IMAGE_TAG: latest
