--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ build:
   stage: build
   script:
     - npm install -g @angular/cli@15.1.6
-    - npm install --verbose --force
+    - npm install
     - ng build
   artifacts:
     paths:
