tryig to fix cicd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,14 +30,14 @@ cache:
       --push .
 
 .node-job: &node-job
-  image: node:latest
+  image: node:18.18.0
 
 build:
   <<: *node-job
   stage: build
   script:
     - npm install -g @angular/cli@15.1.6
-    - npm install --force
+    - npm install
     - ng build
   artifacts:
     paths:
