--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,64 +1,3 @@
-stages:
-  - test
-  - build
-  - deploy
-
-variables:
-  DOCKER_DRIVER: overlay2
-  BUILDX_VERSION: "v0.6.1"
-  BUILDX_ARCH: "linux-amd64"
-
-cache:
-  key: "$CI_PIPELINE_ID"
-  paths:
-    - dist/
-    - node_modules/
-
-.docker-job: &docker-job
-  image: docker:stable
-  services:
-    - docker:dind
-  before_script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - wget -O /usr/bin/docker-buildx https://github.com/docker/buildx/releases/download/${BUILDX_VERSION}/buildx-${BUILDX_VERSION}.${BUILDX_ARCH}
-    - chmod +x /usr/bin/docker-buildx
-  script:
-    - docker-buildx create --use
-    - docker-buildx build
-      --platform linux/amd64,linux/arm/v7,linux/arm64/v8
-      --tag ${CI_REGISTRY_IMAGE}:$IMAGE_TAG
-      --push .
-
-.node-job: &node-job
-  image: node:18.18.0
-
-build:
-  <<: *node-job
-  stage: build
-  script:
-    - npm install -g @angular/cli@15.1.6
-    - npm install --legacy-peer-deps --force
-    - ng build
-  artifacts:
-    paths:
-      - dist/
-    expire_in: 2 hours
-  cache:
-    paths:
-      - node_modules/
-
-deploy:
-  <<: *docker-job
-  stage: deploy
-  only:
-    - tags
-  variables:
-    IMAGE_TAG: $CI_COMMIT_REF_NAME
-
-deploy-latest:
-  <<: *docker-job
-  stage: deploy
-  only:
-    - master
-  variables:
-    IMAGE_TAG: latest
+include:
+  project: 'FabianKla/cicd_dry_templates'
+  file: 'complete/angular/Build_Angular15_1_6_Node18_8.yml'
